...
    
    @ToolbarContentBuilder
    private func toolbarForMainViewBody() -> some ToolbarContent {
        
        ToolbarItem(placement: .navigationBarLeading) {
            CircleStrokeButtonView(
                iconName: "gearshape",
                isShownCircle: false)
            {
                showPreferancesView.toggle()
            }
        }
        if !noticevm.notices.filter({ $0.isRead == false }).isEmpty && noticevm.isNotificationOn {
...
            }
        }
        
        ToolbarItemGroup(placement: .navigationBarTrailing) {
//            ToolbarItem(placement: .navigationBarTrailing) {
                CircleStrokeButtonView(
                    iconName: "plus",
                    isShownCircle: false)
                {
                    showAddPostView.toggle()
                }
//            }
//            ToolbarItem(placement: .navigationBarTrailing) {
                CircleStrokeButtonView(
                    iconName: "line.3.horizontal.decrease",
                    isIconColorToChange: !vm.isFiltersEmpty,
                    isShownCircle: false)
            {
                isFilterButtonPressed.toggle()
            }
//            }
...
                        .textFormater()
                        .padding(.horizontal)
                        
                        Button {
                            showTermsOfUse = true
                        } label: {
                            Text("Terms of Use")
                                .font(.title)
                        }
                        .tint(Color.mycolor.myBlue)
                        .padding()
                        .navigationDestination(isPresented: $showTermsOfUse) {
                            TermsOfUse() {
...
    }
}

#Preview {
    
    NavigationStack {
        HomeView(selectedCategory: "SwiftUI")
    }
    .environmentObject(PostsViewModel())
    .environmentObject(NoticeViewModel())
    .environmentObject(SpeechRecogniser())
}

...
