...
                        }
                    }
                }
            }
            .navigationTitle("Cards")
            .toolbar {
                Button("Add") {
                    selectedCard = nil        // создаём новую
                    showDetails = true
                }
            }
            .sheet(isPresented: $showDetails) {
                CardDetailsView(cards: $cards, card: selectedCard)
...
